--- a/src/Views/RealizarVendaView.form
+++ b/src/Views/RealizarVendaView.form
@@ -136,7 +136,9 @@
     <Component class="javax.swing.JComboBox" name="comboProdutos">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="1">
+            <StringItem index="0" value="iPhone 5S"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
