--- a/src/Views/AlterarClienteDados.form
+++ b/src/Views/AlterarClienteDados.form
@@ -25,61 +25,63 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="comboRua" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="comboBairro" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="optionMasc" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                              <Component id="optionFem" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="comboRua" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="comboBairro" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="optionMasc" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                      <Component id="optionFem" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="txtCpf" alignment="0" pref="150" max="32767" attributes="0"/>
+                                      <Component id="txtIdade" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="txtNumero" alignment="0" pref="150" max="32767" attributes="0"/>
+                                      <Component id="txtTelefone" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtCelular" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtEmail" alignment="0" max="32767" attributes="0"/>
+                                  </Group>
+                              </Group>
                           </Group>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txtCpf" alignment="0" pref="150" max="32767" attributes="0"/>
-                              <Component id="txtIdade" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="txtNumero" alignment="0" pref="150" max="32767" attributes="0"/>
-                              <Component id="txtTelefone" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtCelular" alignment="0" max="32767" attributes="0"/>
-                              <Component id="txtEmail" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="comboComplemento" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace pref="156" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <Component id="btnConfirmar" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="comboComplemento" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
+                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="156" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="160" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -193,7 +195,28 @@
     <Component class="javax.swing.JComboBox" name="comboBairro">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="20">
+            <StringItem index="0" value="Garcia"/>
+            <StringItem index="1" value="Fortaleza"/>
+            <StringItem index="2" value="Centro"/>
+            <StringItem index="3" value="Vila Nova"/>
+            <StringItem index="4" value="&#xc1;gua Verde"/>
+            <StringItem index="5" value="Velha"/>
+            <StringItem index="6" value="Itoupava Seca"/>
+            <StringItem index="7" value="Itoupava Norte"/>
+            <StringItem index="8" value="Nova Esperan&#xe7;a"/>
+            <StringItem index="9" value="Vila Formosa"/>
+            <StringItem index="10" value="Vorstadt"/>
+            <StringItem index="11" value="Progresso"/>
+            <StringItem index="12" value="Itoupavazinha"/>
+            <StringItem index="13" value="Salto do Norte"/>
+            <StringItem index="14" value="Pa&#xe7;o Manso"/>
+            <StringItem index="15" value="Testo Salto"/>
+            <StringItem index="16" value="Escola Agr&#xed;cola"/>
+            <StringItem index="17" value="Victor Konder"/>
+            <StringItem index="18" value="Ponta Aguda"/>
+            <StringItem index="19" value="Tribess"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
@@ -237,7 +260,50 @@
     <Component class="javax.swing.JComboBox" name="comboRua">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="42">
+            <StringItem index="0" value="Rua Abacateiro"/>
+            <StringItem index="1" value="Rua Ab&#xed;lio Michelluzzi"/>
+            <StringItem index="2" value="Rua Achiles Jacobsen"/>
+            <StringItem index="3" value="Rua Ac&#xe1;cio Pereiro"/>
+            <StringItem index="4" value="Rua A&#xe7;ores"/>
+            <StringItem index="5" value="Rua Acre"/>
+            <StringItem index="6" value="Rua Acrisio Moreira da Costa"/>
+            <StringItem index="7" value="Rua 30 de Outubro"/>
+            <StringItem index="8" value="Rua 6 de agosto"/>
+            <StringItem index="9" value="Aveniada Rio do Sul"/>
+            <StringItem index="10" value="Rua 30 de agosto"/>
+            <StringItem index="11" value="Rua Setenta e Oito e Meio"/>
+            <StringItem index="12" value="Rua Romarinho"/>
+            <StringItem index="13" value="Rua Obrigado&#x9;"/>
+            <StringItem index="14" value="Rua Urupema"/>
+            <StringItem index="15" value="Rua Ipatinga"/>
+            <StringItem index="16" value="Rua Java"/>
+            <StringItem index="17" value="Rua Adobe Strike 1.6"/>
+            <StringItem index="18" value="Rua Jorge do Sul"/>
+            <StringItem index="19" value="Rua Tobias Barreto"/>
+            <StringItem index="20" value="Rua Julio Kleine"/>
+            <StringItem index="21" value="Rua 90 de Agosto"/>
+            <StringItem index="22" value="Rua Paraiba"/>
+            <StringItem index="23" value="Rua Joinville"/>
+            <StringItem index="24" value="Rua Curitiba"/>
+            <StringItem index="25" value="Rua 15 de agosto"/>
+            <StringItem index="26" value="Rua 43 de setembro"/>
+            <StringItem index="27" value="Avenida Gar&#xe7;a Velha"/>
+            <StringItem index="28" value="Rua Ahosto"/>
+            <StringItem index="29" value="Rua Irineu"/>
+            <StringItem index="30" value="Rua Roberto Carlos"/>
+            <StringItem index="31" value="Rua Pel&#xe9;"/>
+            <StringItem index="32" value="Rua Sem sa&#xed;da"/>
+            <StringItem index="33" value="Rua 30 de janeiro"/>
+            <StringItem index="34" value="Rua Bar&#xe3;o"/>
+            <StringItem index="35" value="Rua Teodoro"/>
+            <StringItem index="36" value="Rua Pikachu"/>
+            <StringItem index="37" value="Rua Com Sa&#xed;da"/>
+            <StringItem index="38" value="Rua Galeg&#xe3;o"/>
+            <StringItem index="39" value="Rua Pichau"/>
+            <StringItem index="40" value="Rua 30 de dezembro"/>
+            <StringItem index="41" value="Rua S&#xe3;o Paulo"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
@@ -259,7 +325,11 @@
     <Component class="javax.swing.JComboBox" name="comboComplemento">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="3">
+            <StringItem index="0" value="Casa"/>
+            <StringItem index="1" value="Apartamento"/>
+            <StringItem index="2" value="Nenhum"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
